--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,6 +21,7 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family:"Poppins" sans-serif;
+  overflow-x: hidden;
 }
 
 @layer base {
