--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -8,6 +8,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+
 }
 
 @media (prefers-color-scheme: dark) {
@@ -22,6 +23,18 @@ body {
   background: var(--background);
   font-family:"Poppins" sans-serif;
   overflow-x: hidden;
+
+  /* REMOVE THIS AFTER */
+  /* overflow-y: hidden; */
+}
+
+
+.sour-gummy-font {
+  font-family: "Sour Gummy", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
 }
 
 @layer base {
@@ -107,4 +120,23 @@ body {
   cursor: pointer;
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+
+.loader {
+  width: 30px;
+  aspect-ratio: 2;
+  --_g: no-repeat radial-gradient(circle closest-side,#aaa 90%,#0000);
+  background: 
+    var(--_g) 0%   50%,
+    var(--_g) 50%  50%,
+    var(--_g) 100% 50%;
+  background-size: calc(100%/3) 50%;
+  animation: l3 1.5s infinite linear;
+}
+@keyframes l3 {
+    25%{background-position:0%   0%, 50%  50%,100%  50%}
+    45%{background-position:0% 100%, 50%   0%,100%  50%}
+    65%{background-position:0%  50%, 50% 100%,100%   0%}
+    85%{background-position:0%  50%, 50%  50%,100% 100%}
 }
